# cheat-at-search

./: .gitignore  AGENTS.md  CAS_LIBRARY_ANALYSIS.md  CLAUDE.md  LICENSE  README.md  Week1_NOTEBOOKS_ANALYSIS.md  Week1_Week2_Progression_Analysis.md  Week2_Notebooks_Analysis.md  Week3_Notebooks_Analysis.md  package-lock.json  pyproject.toml
CollabNBs/Week1/: 1_Cheat_at_Search_Basic_Chat_Loop.ipynb  1a_RAG_Wayfair_Dataset.ipynb  1b_Agentic_Search_Loop_Wayfair_Dataset.ipynb
CollabNBs/Week2/: 1_Cheat_at_Search_with_LLMs_Synonyms_from_LLMs.ipynb  2_Cheat_at_Search_Perfect_Categorization.ipynb  2a_Cheat_at_Search_Query_Categories_List.ipynb
CollabNBs/Week3/: 3_Cheat_at_Search_Agentic_Search_Loop_baseline_Wayfair_Dataset.ipynb  3a_Cheat_at_Search_Agentic_Search_Loop_steer_and_guide_Wayfair_Dataset.ipynb
cheat_at_search/: baseline.py  cache.py  data_dir.py  doug_blog_data.py  embedder.py  esci_data.py  eval.py  gather.py  logger.py  minimarco_data.py  msmarco_data.py  query.py  search.py  start_rerank_esci.py  tmdb_data.py  tokenizers.py  two_tower.py  wands_data.py
cheat_at_search/agent/: cached_enrich_client.py  chat.py  enrich.py  enrich_client.py  esci.py  esci_old.py  harness.py  history.py  instructor_enrich_client.py  judgments.py  mcp.py  openai_agent.py  openai_search_client.py  openrouter_enrich_client.py  pydantize.py  search_client.py  strategy.py  wands.py
cheat_at_search/enrich/: __init__.py  cached_enrich_client.py  enrich.py  enrich_client.py  entities.py  google_enrich_client.py  instructor_enrich_client.py  openai_enrich_client.py  openrouter_enrich_client.py
cheat_at_search/esci/: baseline.py  data.py  search.py
cheat_at_search/model/: __init__.py  category_list.py  product.py  query.py
cheat_at_search/strategies/: __init__.py  baseline.py  minilm.py  strategy.py
cheat_at_search/strategy/: __init__.py  best.py  bm25.py  category.py  corrected.py  embedding.py  enriched.py  enriched_room.py  minilm.py  rebuilt.py  strategy.py  synonyms.py
cheat_at_search/tools/: code.py  eval.py
cheat_at_search/wands/: baseline.py  data.py  search.py
model/: __init__.py  query.py
notebooks/: Analyze and Improve BM25.ipynb  BM25 vs Blind Synonyms.ipynb  Improve-agentic.ipynb
tests/: conftest.py  enrich_tests.py  product_enrich_tests.py  test_agent.py  test_code_tools.py  test_dataframe_enricher.py  test_datasets.py  test_doug_blog_data.py  test_mcp_server.py  test_minimarco_data.py  test_pydantize.py  test_search.py  test_wands_data.py
tests/integration/: test_enrich_integration.py  test_product_enrich_integration.py
tests/unit/: test_enrich_cache_client.py  test_entities.py  test_entities_repr.py
