[project]
name = "cheat-with-llms"
version = "0.1.0"
description = "Cheat with LLMs example code"
authors = [
    {name = "Doug Turnbull",email = "softwaredoug@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "ollama (>=0.4.8,<0.5.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "searcharray (>=0.0.72,<0.0.73)",
    "pystemmer (>=3.0.0,<4.0.0)",
    "sentence-transformers (>=4.1.0,<5.0.0)",
    "torch (>=2.7.0,<3.0.0)",
    "openai (>=1.82.0,<2.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipython (>=9.2.0,<10.0.0)",
    "tabulate (>=0.9.0,<0.10.0)"
]

[tool.pylsp.plugins]
mypy.enabled = true
flake8.enabled = true
autopep8.enabled = false
yapf.enabled = false
black.enabled = false
pyright.enabled = false

[pycodestyle]
max-line-length = 120

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
