[project]
name = "cheat_at_search"
version = "0.1.0"
description = "Cheat with LLMs example code"
authors = [
    {name = "Doug Turnbull",email = "softwaredoug@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0.0"
dependencies = [
    "pydantic (>=2.11.0,<3.0.0)",
    "pandas (>=2.2.0,<3.0.0)",
    "searcharray (>=0.0.72,<0.0.73)",
    "pystemmer (>=3.0.0,<4.0.0)",
    "openai (>=1.84.0,<2.0.0)",
]

[tool.pylsp.plugins]
mypy.enabled = true
flake8.enabled = true
autopep8.enabled = false
yapf.enabled = false
black.enabled = false
pyright.enabled = false


[tool.poetry.group.dev.dependencies]
ipython = "^9.3.0"

[pycodestyle]
max-line-length = 120

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
