[project]
name = "cheat_at_search"
version = "0.1.0"
description = "Cheat with LLMs example code"
authors = [
    {name = "Doug Turnbull",email = "softwaredoug@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0.0"
dependencies = [
    "pydantic (>=2.11.0,<3.0.0)",
    "pandas (>=2.2.0,<3.0.0)",
    "searcharray (>=0.0.73,<0.0.74)",
    "pystemmer (>=3.0.0,<4.0.0)",
    "openai (>=1.84.0,<2.0.0)",
    "google-genai (>=1.2.0,<2.0.0)",
    "pyarrow (>=14.0.0,<22.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "lxml (>=6.0.2,<7.0.0)",
]

[tool.pylsp.plugins]
mypy.enabled = true
flake8.enabled = true
autopep8.enabled = false
yapf.enabled = false
black.enabled = false
pyright.enabled = false


[tool.poetry.group.dev.dependencies]
ipython = "^9.3.0"
pytest = "^8.4.1"

[pycodestyle]
max-line-length = 120

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
